# polari

./: meson.build
flatpak/: org.gnome.Polari.json
src/: meson.build  org.gnome.Polari.src.gresource.xml  telepathyClient.js
